Refresh and access token creation were implemented, signIn flow was implemented